<?xml version="1.0"?>
<package>
  <name>dynamic_transform_publisher</name>
  <version>0.0.0</version>
  <description>The dynamic_transform_publisher package</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>
</package>
