<?xml version="1.0"?>
<package format="2">
  <name>dynamic_transform_publisher</name>
  <version>1.0.1</version>
  <description>Publish a static transform configured through dynamic reconfigure</description>

  <maintainer email="allison@lyonthackston.com">Allison Thackston</maintainer>
  <author email="allison@lyonthackston.com">Allison Thackston</author>  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>interactive_markers</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
